# paint-on-wordle

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: cli.py  main.py  solution.py
src/data/: words.txt
